# agrnticai_learning

./: pyproject.toml  requirements.txt
ChatModels/: chatmodel_google.py  chatmodel_hf_api.py  chatmodel_openai.py
EmbeddingModels/: document_similarity_search.py  embedding_hf_local.py  embedding_openai_document.py  embedding_openai_query.py
FirstApp/: app.py
LLMs/: llm_demo.py
LangChain_StructuredOutput/: with_structured_output_json.py  with_structured_output_pydantic.py  with_structured_output_typedict.py
Langchain-Chains/: conditional-chain.py  parallel-chain.py  sequential-chain.py  simple-chain.py
Langchain-DocLoaders/: CSVLoader.py  DirectoryLoader.py  PyPDFLoader.py  TextLoader.py  WebbasedLoader.py
Langchain-Retrievers/: Contextual_Retriever.py  MMRStrategy_Retriever.py  MultiQuery_Retriever.py  Vectorestore_retriever.py  Wikipedia_Retriever.py
Langchain-Textsplitters/: characterbased_splitter.py  recursive_splitter_markdown.py  recursive_text_splitter.py
Langchain-Vectordb/: chromadb_vectorstore.py
Langchain_OutputParser/: JsonOutputParser.py  PydanticOutputParsers.py  StrOutputParser
Langchain_ReAct_Agent/: SimpleReActAgent.py
Langchain_prompts/: ChatPromptTemplate.py  MessagePlaceHolder.py  messages.py  openai_prompt.py  prompt_generator.py
Langchain_tools/: tool_with_basetool.py  tool_with_decorator.py  tool_with_pydantic.py
chromadb/: chroma.sqlite3
n8n_workflow/: SimpleChatInput.json  TelegramChatbot.json  input_output_guardrails_poc.json
